--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>sAPI TODO</title>
+  <title>sAPI</title>
+  <link rel="icon" href="/static/logo.png" type="image/png">
   <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
   <header class="parallax">
     <h1>sAPI To-Do List</h1>
   </header>
-  
+
   <main>
     <div class="todo-container">
       <form id="taskForm">
-        <input type="text" id="taskInput" placeholder="Enter new task..." required>
-        <button type="submit" id="addTask">Add Task</button>
+        <input type="text" id="taskInput" placeholder="Введите новую задачу..." required>
+        <button type="submit" id="addTask">Добавить задачу</button>
       </form>
       <ul id="taskList"></ul>
     </div>
