--- a/frontend/front/index.html
+++ b/frontend/front/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>sAPI</title>
-  <link rel="icon" href="/static/logo.png" type="image/png">
-  <link rel="stylesheet" href="/static/styles.css">
+  <link rel="icon" href="logo.png" type="image/png">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="parallax">
@@ -26,6 +26,6 @@
     <p>&copy; 2024 - Designed by s4bb4t for EASYDEV</p>
   </footer>
 
-  <script src="/static/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
