--- a/frontend/front/index.html
+++ b/frontend/front/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="parallax">
-    <h1>sAPI To-Do List</h1>
+    <h1>sAPI GovnoList</h1>
   </header>
 
   <main>
@@ -23,7 +23,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 - Designed by s4bb4t for EASYDEV</p>
+    <p>&copy; 2024 - EASYDEV</p>
   </footer>
 
   <script src="app.js"></script>
