--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="parallax">
-    <h1>sAPI GovnoList</h1>
+    <h1>СДЕЛАЙТЕ ФРОНТЕНД ПЖ</h1>
   </header>
 
   <main>
