--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -11,21 +11,10 @@
   <header class="parallax">
     <h1>СДЕЛАЙТЕ ФРОНТЕНД ПЖ</h1>
   </header>
-
-  <main>
-    <div class="todo-container">
-      <form id="taskForm">
-        <input type="text" id="taskInput" placeholder="Введите новую задачу..." required>
-        <button type="submit" id="addTask">Добавить задачу</button>
-      </form>
-      <ul id="taskList"></ul>
-    </div>
-  </main>
-
+  
   <footer>
-    <p>&copy; 2024 - EASYDEV</p>
+    <p>&copy; 2024 - s4bb4t</p>
   </footer>
 
-  <script src="app.js"></script>
 </body>
 </html>
